--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
+    "require": {
+        "php": ">=5.3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7.0"
+    },
     "autoload": {
 	    "psr-4": {
 	    	"SurfStack\\": "src/SurfStack/"
